@@ -1,3 +1,13 @@
+2011-03-26  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/sidebar.c:
+   Fix the sidebar popup menu to properly use the currently selected item
+   rather than the previous one.
+   Also change the hack used for the selection to be updated in the input
+   handlers to call the GtkTreeView's handler manually rather than doing
+   the actual job in IDLE callbacks for the TreeView's handler to have run.
+
+
 2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * data/filetypes.vala:
